相手の行動のたびにその内容を敵全員に通知

--- a/public/game.html
+++ b/public/game.html
@@ -1383,6 +1383,10 @@
             }
         })
 
+        socket.on('onatherTurn', (data) => {
+            console.log(`相手のターン: ${data.kind} -> ${data.choice}`)
+        })
+
         socket.on('result', (data) => {
             showResult(data.result)
         })
