fix:カード8で次のターンまで入れ替わりが表示に反映されないバグを修正

--- a/public/game.html
+++ b/public/game.html
@@ -1345,6 +1345,8 @@
                     callback([playerSelect])
                 }
                 console.log(`playerSelect: ${playerSelect}`)
+            }else if(data.kind == 'update'){
+                callback([0])
             }else{
                 try {
                     let playerSelect = await select(data.choices);
