画面統合済み

--- a/public/game.html
+++ b/public/game.html
@@ -443,12 +443,12 @@
     </style>
 </head>
 <body>
-    <div class="container" id="startScreen">
+    <div class="container" id="startScreen" style="display: none;">
         <h1>XENO</h1>
         <button onclick="startGame()">ゲーム開始</button>
         <button onclick="showRules()">ルール説明</button>
     </div>
-    <div class="game-screen" id="gameScreen">
+    <div class="game-screen" id="gameScreen" style = "display: flex;">
         <!-- ログエリア -->
         <div id="left-column">
             <!-- ログエリア -->
@@ -591,9 +591,11 @@
         const deckContainer = document.getElementById("deck-container");
 
         function startGame() {
-            document.getElementById("startScreen").style.display = "none";
-            document.getElementById("gameScreen").style.display = "flex";
             socket.emit("ready", {roomId: roomId, playerId: playerId});
+            console.log("サーバーに準備完了を通知しました。"); // 動作確認用のログ
+            // document.getElementById("startScreen").style.display = "none";
+            // document.getElementById("gameScreen").style.display = "flex";
+            //socket.emit("ready", {roomId: roomId, playerId: playerId});
             // ゲーム開始時に手札を初期化
             // playerHand = [];
             // opponentHand = [];
@@ -951,6 +953,7 @@
             })
         }
 
+        startGame();
         
         // CPUが山札からカードを引く
         function cpuDrawCardToHand() {
