--- a/public/game.html
+++ b/public/game.html
@@ -454,12 +454,12 @@
     </div>
     <div class="game-screen" id="gameScreen" style = "display: flex;">
         <!-- 待機中の部屋ID表示 -->
-        <!-- <div id="waiting-info">
+        <div id="waiting-info">
             <p>対戦相手を待っています...</p>
             <p id="room-id-display"></p>
             <button id="copy-room-id-btn">コピー</button>
             <p>このIDを参加者に伝えてください。</p>
-        </div> -->
+        </div>
         <!-- ログエリア -->
         <div id="left-column">
             <!-- ログエリア -->
