--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,14 @@
   <link rel="stylesheet" href="./index.css">
   <meta charset="UTF-8">
   <title>XENO</title>
+  <style>
+    #rooms {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 10px;
+    }
+  </style>
 </head>
 <body>
   <h1>XENO</h1>
