feat/room選択画面でオーナーを表示

--- a/public/index.html
+++ b/public/index.html
@@ -80,11 +80,38 @@
           rooms.innerHTML = "";
           for (let i=0; i<room_list.length; i++) {
             let item = document.createElement('button');
-            item.value = room_list[i];
-            item.textContent = room_list[i];
+            let back = document.createElement('div');
+            back.style.height = "140px";
+            back.style.width = "230px";
+            back.style.backgroundColor = "#da7326";
+            back.style.borderWidth = "6px";
+            back.style.borderStyle = "solid";
+            back.style.borderRadius = "10px";
+            back.style.margin = "auto";
+            back.style.padding = "auto";
+            item.style.height = "180px";
+            item.style.width = "270px";
+            item.style.borderWidth = "6px";
+            item.style.borderRadius = "10px";
+            item.style.backgroundColor = "#3e1e00"
+            item.style.borderStyle = "solid";
+            let contentRoomId = document.createElement('p');
+            contentRoomId.textContent = `${room_list[i]}`;
+            contentRoomId.style.margin = '3px';
+            back.appendChild(contentRoomId);
+            let contentOwner = document.createElement('p');
+            contentOwner.textContent = 'オーナー';
+            contentOwner.style.margin = '3px';
+            back.appendChild(contentOwner);
+            let contentOwnerName = document.createElement('p');
+            contentOwnerName.textContent = response.players[response.rooms[room_list[i]].owner].name;
+            contentOwnerName.style.margin = '3px';
+            back.appendChild(contentOwnerName);
+            // item.textContent = room_list[i];
             item.addEventListener('click', () => {
               joinRoom(item.value)
             });
+            item.appendChild(back);
             rooms.appendChild(item);
             window.scrollTo(0, document.body.scrollHeight);
           }
