--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
         if (!response || !response.success) {
           alert(response ? response.message : 'ルーム参加に失敗しました');
         } else {
-          window.location.replace(`game.html?roomid=${roomId}?playerid=${response.playerId}?players=${response.players}`)
+          window.location.replace(`game.html?roomId=${roomId}&playerId=${response.playerId}&players=${response.players}`)
         }
       });
     }
