--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body>
-  <h1>Shige</h1>
+  <h1>Shige-Test</h1>
 
   <div class="select_rooms", id="selectRooms">
     <!-- プレイヤー名 -->
