--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <link rel="stylesheet" href="./index.css">
   <meta charset="UTF-8">
-  <title>Shige</title>
+  <title>XENO</title>
   <style>
     #rooms {
         display: flex;
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body>
-  <h1>Shige-Test</h1>
+  <h1>XENO</h1>
 
   <div class="select_rooms", id="selectRooms">
     <!-- プレイヤー名 -->
