update:本番のレイアウトにindex画面を修正

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
           <div class="room-list-section">
             <div class="search-and-display">
               <input type="text" id="searchInput" placeholder="検索...">
-              <button id="showRoomsBtn" class="show-rooms-btn">ルーム一覧表示</button>
+              <button id="showRoomsBtn" class="show-rooms-btn">表示</button>
             </div>
             <div id="rooms"></div>
             <div class="join-group">
