--- a/public/game.html
+++ b/public/game.html
@@ -128,9 +128,10 @@
     <div id="tooltip-card-effect" class="tooltip-effect"></div>
   </div>
 
-  <!-- GSAP（CDN）→ socket.io → ゲームJS の順 -->
+  <!-- GSAP（CDN）→ socket.io → messages → ゲームJS の順 -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
+  <script src="./js/messages.js"></script>
   <script src="./js/animation.js"></script>
   <script defer src="./js/game.js"></script>
 </body>
