--- a/public/result.html
+++ b/public/result.html
@@ -11,6 +11,7 @@
     <div class="result-content">
         <h1 id="result-text"></h1>
         <p id="result-reason"></p>
+        <p id="rematch-timer">10秒後に自動で再戦します...</p>
         <div class="button-container">
             <button id="play-again-btn">replay</button>
             <button id="return-to-lobby-btn">back to Lobby</button>
