--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         <div class="select_rooms" id="selectRooms">
           <!-- セクション1: プレイヤー名 -->
           <div class="name-section">
-            <input type="text" id="name" placeholder="おなまえは？">
+            <input type="text" id="name" placeholder="おなまえは？" autofocus>
           </div>
           
           <!-- セクション2: ルーム一覧表示 -->
