--- a/public/result.html
+++ b/public/result.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="./styles/result.css">
 </head>
 <body>
+    <div class="score-container">
+    <h2>マッチスコア</h2>
+    <div id="score-display">
+        <span id="p1-name">プレイヤー1</span>: <span id="p1-score">0</span>
+        -
+        <span id="p2-score">0</span> : <span id="p2-name">プレイヤー2</span>
+    </div>
+</div>
     <div class="result-content">
         <h1 id="result-text"></h1>
         <p id="result-reason"></p>
