--- a/public/rule.html
+++ b/public/rule.html
@@ -27,7 +27,7 @@
     <div class="tab-content" id="page2">
       <div class="card-pills">
         <button class="pill-btn active" data-card-target="card1">1:俺</button>
-        <button class="pill-btn" data-card-target="card2">2:粗探し</button>
+        <button class="pill-btn" data-card-target="card2">2:探偵</button>
         <button class="pill-btn" data-card-target="card3">3:エスパー</button>
         <button class="pill-btn" data-card-target="card4">4:バリア</button>
         <button class="pill-btn" data-card-target="card5">5:下痢</button>
@@ -42,12 +42,12 @@
         <div class="card-desc active" id="card1">
             <h2>カード1【俺】</h2>
             <img src="./images/1.jpg" alt="少年カード画像" class="rule-image" />
-            <h3>カード効果【革命】</h3>
+            <h3>カード効果【オレは2人もいらない】</h3>
             <p>1枚目は何の効果も発動しないが、場に2枚目が出た場合は相手の手札を把握した上で1枚捨てさせる</p>
         </div>
         
         <div class="card-desc" id="card2">
-            <h2>カード2【粗探し】</h2>
+            <h2>カード2【探偵】</h2>
             <img src="./images/2.jpg" alt="少女カード画像" class="rule-image" />
             <h3>カード効果【粗探し】</h3>
             <p>相手の手札を言い当てると相手は脱落する</p>
