--- a/public/game.html
+++ b/public/game.html
@@ -3,7 +3,34 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>XENO - ゲーム</title>
+  <title>HΛLPΛL - ゲーム画面</title>
+  
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="HΛLPΛL カードゲームのリアルタイム対戦画面。戦略的なカードプレイで相手を倒そう！">
+  <meta name="keywords" content="HΛLPΛL, HALPAL, カードゲーム, ゲーム画面, リアルタイム対戦">
+  <meta name="robots" content="noindex, nofollow">
+  
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="HΛLPΛL - ゲーム画面">
+  <meta property="og:description" content="HΛLPΛL カードゲームのリアルタイム対戦中">
+  <meta property="og:type" content="website">
+  
+  <!-- PWA Support -->
+  <meta name="theme-color" content="#2c3e50">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  
+  <!-- Performance Optimization -->
+  <link rel="preload" href="./styles/game.css" as="style">
+  <link rel="preload" href="./js/game.js" as="script">
+  <link rel="preload" href="./js/animation.js" as="script">
+  <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" as="script" crossorigin>
+  
+  <!-- Favicon and Icons -->
+  <link rel="icon" href="/favicon/favicon.ico" sizes="32x32">
+  <link rel="icon" href="/favicon/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="/favicon/apple-touch-icon.png">
+  <link rel="manifest" href="/favicon/site.webmanifest">
   <link rel="stylesheet" href="./styles/game.css" />
 </head>
 <body>
