--- a/public/result.html
+++ b/public/result.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html lang="ja">
+  <!-- Performance Optimization -->
+  <link rel="preload" href="./styles/result.css" as="style">
+  <link rel="preload" href="./js/result.js" as="script">
+  
+  <!-- Favicon and Icons -->
+  <link rel="icon" href="/favicon/favicon.ico" sizes="32x32">
+  <link rel="icon" href="/favicon/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="/favicon/apple-touch-icon.png">
+  <link rel="manifest" href="/favicon/site.webmanifest">
+  <link rel="stylesheet" href="./styles/result.css">lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>XENO - ゲーム結果</title>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HΛLPΛL - ゲーム結果</title>    <!-- SEO Meta Tags -->
+    <meta name="description" content="HΛLPΛL カードゲームの対戦結果画面">
+    <meta name="robots" content="noindex, nofollow">
+    
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="HΛLPΛL - ゲーム結果">
+  <meta property="og:description" content="HΛLPΛL カードゲームの対戦が終了しました">
+  <meta property="og:type" content="website">
+  
+  <!-- PWA Support -->
+  <meta name="theme-color" content="#2c3e50">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">    <!-- Favicon and Icons -->
+    <link rel="icon" href="/favicon/favicon.ico" sizes="32x32">
+    <link rel="icon" href="/favicon/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="/favicon/apple-touch-icon.png">
+    <link rel="manifest" href="/favicon/site.webmanifest">
     <link rel="stylesheet" href="./styles/result.css">
 </head>
 <body>
