--- a/public/game.html
+++ b/public/game.html
@@ -27,10 +27,10 @@
   <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" as="script" crossorigin>
   
   <!-- Favicon and Icons -->
-  <link rel="icon" href="/favicon/favicon.ico" sizes="32x32">
-  <link rel="icon" href="/favicon/favicon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="/favicon/apple-touch-icon.png">
-  <link rel="manifest" href="/favicon/site.webmanifest">
+  <link rel="icon" href="/favicon.ico" sizes="32x32">
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <link rel="manifest" href="/site.webmanifest">
   <link rel="stylesheet" href="./styles/game.css" />
 </head>
 <body>
