--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,10 @@
   
   <link rel="stylesheet" href="./styles/index.css">
   <!-- Favicon and Icons -->
-  <link rel="icon" href="/favicon/favicon.ico" sizes="32x32">
-  <link rel="icon" href="/favicon/favicon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="/favicon/apple-touch-icon.png">
-  <link rel="manifest" href="/favicon/site.webmanifest">
+  <link rel="icon" href="/favicon.ico" sizes="32x32">
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <link rel="manifest" href="/site.webmanifest">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HΛLPΛL - オンラインカードゲーム</title>
