--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <link rel="stylesheet" href="./styles/index.css">
   <meta charset="UTF-8">
-  <title>XENO</title>
+  <title>HΛLPΛL</title>
   <style>
     #rooms {
         display: flex;
