--- a/public/rule.html
+++ b/public/rule.html
@@ -2,12 +2,12 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>ZENOのルール説明</title>
+  <title>HΛLPΛLのルール説明</title>
   <link rel="stylesheet" href="./styles/game.css" />
 </head>
 <body>
   <div class="modal-content">
-    <h2>ZENOのルール</h2>
+    <h2>HΛLPΛLのルール</h2>
     <div class="tab-buttons">
       <button class="tab-btn active" data-target="page1">基本ルール</button>
       <button class="tab-btn" data-target="page2">カードの種類</button>
@@ -20,7 +20,7 @@
         各ターン、2枚の手札のうち1枚を場に出して効果を発動します。<br>
         山札がない場合、カードを引く必要がある効果は発動できません。<br>
         カードの効果で相手を脱落させると勝利します。<br>
-        英雄が皇帝以外の効果で捨てさせられた場合、あるいは手札に英雄があるプレイヤーが脱落させられた場合は手札をすべて捨てて転生札を手札に加え、復活します。<br>
+        カード10「彼女」がカード9「悪魔」以外で捨てさせられた場合、あるいは手札に英雄があるプレイヤーが脱落させられた場合は手札をすべて捨てて、デッキの側にある信頼復活札を手札に加え、復活します。<br>
         ゲーム開始時に山札が無くなった場合は、より大きいカードを持っているプレイヤーが勝利します。
       </p>
     </div>
@@ -41,42 +41,42 @@
       <div class="card-descriptions">
         <div class="card-desc active" id="card1">
             <h2>カード1【俺】</h2>
-            <img src="./images/1.jpg" alt="少年カード画像" class="rule-image" />
+            <img src="./images/1.jpg" alt="俺カード画像" class="rule-image" />
             <h3>カード効果【オレは2人もいらない】</h3>
             <p>1枚目は何の効果も発動しないが、場に2枚目が出た場合は相手の手札を把握した上で1枚捨てさせる</p>
         </div>
         
         <div class="card-desc" id="card2">
             <h2>カード2【探偵】</h2>
-            <img src="./images/2.jpg" alt="少女カード画像" class="rule-image" />
+            <img src="./images/2.jpg" alt="探偵カード画像" class="rule-image" />
             <h3>カード効果【粗探し】</h3>
             <p>相手の手札を言い当てると相手は脱落する</p>
         </div>
 
         <div class="card-desc" id="card3">
             <h2>カード3【エスパー】</h2>
-            <img src="./images/3.jpg" alt="少女カード画像" class="rule-image" />
+            <img src="./images/3.jpg" alt="エスパーカード画像" class="rule-image" />
             <h3>カード効果【エスパー】</h3>
             <p>相手の手札を見る</p>
         </div>
 
         <div class="card-desc" id="card4">
             <h2>カード4【バリア】</h2>
-            <img src="./images/4.jpg" alt="少女カード画像" class="rule-image" />
+            <img src="./images/4.jpg" alt="バリアカード画像" class="rule-image" />
             <h3>カード効果【バリア】</h3>
             <p>次の自分の手番まで自分への効果を無効化する</p>
         </div>
 
         <div class="card-desc" id="card5">
             <h2>カード5【下痢】</h2>
-            <img src="./images/5.jpg" alt="少女カード画像" class="rule-image" />
+            <img src="./images/5.jpg" alt="下痢カード画像" class="rule-image" />
             <h3>カード効果【下痢】</h3>
             <p>相手に山札から1枚引かせる。2枚になった相手の手札を非公開にさせたまま、ランダムで1枚を捨てさせる</p>
         </div>
         <div class="card-desc" id="card6">
-            <h2>カード6【対決】</h2>
-            <img src="./images/6.jpg" alt="少女カード画像" class="rule-image" />
-            <h3>カード効果【対決】</h3>
+            <h2>カード6【力比べ】</h2>
+            <img src="./images/6.jpg" alt="力比べカード画像" class="rule-image" />
+            <h3>カード効果【力比べ】</h3>
             <p>相手と手札を見せ合い、数字の小さい方が脱落する</p>
         </div>
 
