--- a/public/result.html
+++ b/public/result.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>XENO - ゲーム結果</title>
+    <title>HΛLPΛL - ゲーム結果</title>
 
     <link rel="stylesheet" href="./styles/result.css">
 </head>
