--- a/public/result.html
+++ b/public/result.html
@@ -43,6 +43,7 @@
         <p id="opponent-status" class="opponent-status-text"></p>
     </div>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="./js/audio.js"></script>
     <script src="./js/result.js"></script>
 </body>
 </html>
