fix:ルール説明のZENOを修正

--- a/public/rule.html
+++ b/public/rule.html
@@ -34,7 +34,7 @@
 </head>
 <body>
   <div class="modal-content">
-    <h2>ZENOのルール</h2>
+    <h2>HΛLPΛLのルール</h2>
     <div class="tab-buttons">
       <button class="tab-btn active" data-target="page1">基本ルール</button>
       <button class="tab-btn" data-target="page2">カードの種類</button>
