fix:タイムアウト直前のアクションも処理できるように修正

--- a/public/game.html
+++ b/public/game.html
@@ -94,6 +94,12 @@
         <div id="select-container"></div>
     <div id="show-container"></div>
     <div id="showResult"></div>
+    
+    <!-- タイムアウト警告 -->
+    <div id="timeout-warning" class="timeout-warning">
+      <div>⏰ 警告！</div>
+      <div>もうすぐでタイムアウトします</div>
+    </div>
 
     <!-- 相手の中央エリア -->
     <div id="opponent-center-area">
